--- a/html/snake.html
+++ b/html/snake.html
@@ -9,8 +9,11 @@
   </head>
 
   <body>
-    <img src="../images/snake_logo.png" class="logo">
-    <h3 class="length">Length: <span id="length">1</span></h3>
+
+    <p class="background">
+      <img src="../images/snake_logo.png" class="logo">
+      <h3 class="length">Length: <span id="length">1</span></h3>
+    </p>
 
     <figure class="snake-game"></figure>
 
