style changes to welcome screen

--- a/html/snake.html
+++ b/html/snake.html
@@ -12,7 +12,7 @@
 
     <p class="background">
       <img src="../images/snake_logo.png" class="logo">
-      <h3 class="length">Length: <span id="length">1</span></h3>
+      <h3 class="length">Score: <span id="length">1</span></h3>
     </p>
 
     <figure class="snake-game"></figure>
