added drunken snake mode

--- a/html/snake.html
+++ b/html/snake.html
@@ -23,7 +23,7 @@
 
     <script>
       $(function () {
-        new SG.View($(".snake-game"));
+        new SG.View($(".snake-game"), 100);
       });
     </script>
 
