--- a/html/snake.html
+++ b/html/snake.html
@@ -5,13 +5,13 @@
     <title>Snake</title>
     <link rel="stylesheet" type="text/css" href="../css/snake.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> -->
   </head>
 
   <body>
 
     <p class="background">
-      <img src="../images/snake_logo.png" class="logo">
+      <img src="../images/drunken_snake.png" class="logo">
       <h3 class="length">Score <span id="length">1</span></h3>
     </p>
 
