--- a/html/snake.html
+++ b/html/snake.html
@@ -5,14 +5,12 @@
     <title>Snake</title>
     <link rel="stylesheet" type="text/css" href="../css/snake.css">
 
-    <!-- <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> -->
   </head>
 
   <body>
 
     <p class="background">
       <img src="../images/drunken_snake.png" class="logo">
-      <h3 class="length">Score <span id="length">1</span></h3>
     </p>
 
     <figure class="snake-game"></figure>
@@ -23,9 +21,11 @@
 
     <script>
       $(function () {
-        new SG.View($(".snake-game"), 100);
+        new SG.View($(".snake-game"));
       });
     </script>
+
+    <h3 class="length">Score <span id="length">1</span></h3>
 
   </body>
 </html>
